Reduce heights of definition element in media queries, to test whether jumping is fixed on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ button:disabled {
     #definition {
         font-size: 20px;
         margin: 0;
-        height: 90px;
+        height: 70px;
     }
 
     .btn {
